# MPC_PID_ROS2_Control

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: memo.txt  mpc_obs_world.sdf  mpc_zigzag63_path_follow_with_obs.world  mpc_zigzag63_path_follow_with_obs_Nov_14_11_square.world  mpc_zigzag63_path_follow_with_obs_ver2.world  mpc_zigzag63_path_follow_with_obs_ver2_onlyGoal.world  mpc_zigzag63_path_follow_with_obs_ver3.world  mpc_zigzag63_path_follow_with_obs_ver_easy_test.world  pid_zigzag63_path_follow.world  pid_zigzag63_path_follow_with_obs.sdf
config/rviz_config/: mpc_zigzag63_rviz_ver1.rviz
include/: ceres_cost_functor.hpp
scripts/: mpc_rover_state_obs_avoid.txt  mpc_rover_state_obs_avoid_1610.txt  mpc_rover_state_obs_avoid_1710.txt  mpc_rover_state_obs_avoid_1710_10.txt  mpc_rover_state_obs_avoid_1710_11.txt  mpc_rover_state_obs_avoid_1710_12.txt  mpc_rover_state_obs_avoid_1710_13.txt  mpc_rover_state_obs_avoid_1710_2.txt  mpc_rover_state_obs_avoid_1710_3.txt  mpc_rover_state_obs_avoid_1710_4.txt  mpc_rover_state_obs_avoid_1710_5.txt  mpc_rover_state_obs_avoid_1710_6.txt  mpc_rover_state_obs_avoid_1710_7.txt  mpc_rover_state_obs_avoid_1710_8.txt  mpc_rover_state_obs_avoid_1710_9.txt  mpc_rover_state_obs_avoid_2.txt  mpc_rover_state_obs_avoid_3.txt  mpc_rover_state_path_follow_14_11_01.txt  mpc_rover_state_path_follow_14_11_02.txt  mpc_rover_state_path_follow_14_11_03.txt  path.txt  pid_rover_state_naive_obs_avoid_2_11_1.txt  plot_rover.ipynb  rover_state.txt  rover_vel.txt  rover_vel_TIME.txt
src/: manual_joy_controller.cpp  mpc_controller.cpp  mpc_obstacle_avoid.cpp  mpc_obstacle_avoid_polish.cpp  mpc_path_follow.cpp  pid_configured_true_dev.cpp  pid_naive_obs_avoid.cpp  pid_naive_path_follow.cpp  pid_one_turtle.cpp
