<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nhatquangmagic@gmail.com">quang_le</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend> -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
